--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,7954],[[4,5,6,0,[],[1,10,7941],[],[[7,0,0,[],[1,485,2106],[]],[8,0,0,[],[1,2592,4797],[]]],[],[2,2,0,0]]],[],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,1912],[[4,5,6,0,[],[1,21,988],[],[[7,0,0,[],[1,544,121],[]],[8,0,0,[],[1,665,276],[]]],[],[2,2,0,0]],[9,10,11,0,[],[1,1011,900],[],[[12,0,0,[],[1,1447,393],[]]],[],[1,1,0,0]]],[],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/rexera/webcounter/src/tests","*src/tests","*Increment","*/home/rexera/webcounter/src/tests/increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/rexera/webcounter/src/tests","*src/tests","*Increment","*/home/rexera/webcounter/src/tests/increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two","*Set Value","*/home/rexera/webcounter/src/tests/set_value.robot","*src/tests/set_value.robot","*Set Counter Value to Ten"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":2,"skip":0},{"elapsed":"00:00:08","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:02","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":3,"skip":0},{"elapsed":"00:00:01","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":2,"skip":0},{"elapsed":"00:00:01","fail":0,"id":"s1-s2","label":"Tests.Set Value","name":"Set Value","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1731927456784;
+window.output["baseMillis"] = 1731946923947;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7960;
+window.output["generated"] = 1921;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
